--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/MainDashboard.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/MainDashboard.xaml
@@ -12,7 +12,8 @@
         MinWidth="1250"
         Height="1050"
         MaxHeight="1050"
-        MinHeight="1050"        
+        MinHeight="1050"      
+        Loaded="Window_Loaded"
         Title="SchoolAbsenceMonitor">
     <Grid>
         <!-- Add the column and row definitions for the main dashboard--> 
@@ -48,16 +49,16 @@
         </StackPanel>
         <!-- Main dashboard menu bar - Attendance enabled by default -->
         <TabControl Name="Tab_MainTabControl" Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Top" FontFamily="Calibri" FontSize="12" FontWeight="Medium">
-            <TabItem Name="Tbi_Attendance" Height="26" Width="100" Header="Attendance" IsEnabled="True" IsSelected="True" MouseLeftButtonUp="Tbi_Attendance_MouseLeftButtonDown" >
+            <TabItem Name="Tbi_Attendance" Height="26" Width="100" Header="Attendance" Visibility="Visible" IsSelected="True" MouseLeftButtonUp="Tbi_Attendance_MouseLeftButtonDown" >
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Name="Tbi_Reporting" Height="26" Width="100" Header="Reports" IsEnabled="True" MouseLeftButtonUp="Tbi_Reporting_MouseLeftButtonDown"   >
+            <TabItem Name="Tbi_Reporting" Height="26" Width="100" Header="Reports" Visibility="Collapsed" MouseLeftButtonUp="Tbi_Reporting_MouseLeftButtonDown"   >
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Name="Tbi_Admin" Height="26" Width="100" Header="Administration" IsEnabled="True" MouseLeftButtonUp="Tbi_Admin_MouseLeftButtonDown">
+            <TabItem Name="Tbi_Admin" Height="26" Width="100" Header="Administration" Visibility="Collapsed" MouseLeftButtonUp="Tbi_Admin_MouseLeftButtonDown">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Name="Tbi_ApplicationLogs" Height="26" Width="100" Header="System" IsEnabled="True" MouseLeftButtonUp="Tbi_ApplicationLogs_MouseLeftButtonDown">
+            <TabItem Name="Tbi_ApplicationLogs" Height="26" Width="100" Header="System" Visibility="Collapsed" MouseLeftButtonUp="Tbi_ApplicationLogs_MouseLeftButtonDown">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
