--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/Admin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/Admin.xaml
@@ -205,43 +205,49 @@
                     <RowDefinition Height="80*"/>
                     <RowDefinition Height="10*"/>
                 </Grid.RowDefinitions>
-                <ScrollViewer Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top"
-                          ScrollViewer.VerticalScrollBarVisibility="Auto">
-                <ListView Name="LstUserSearch" Grid.Row="1" Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Visible">
+                <ScrollViewer Grid.Row="1"
+                              Grid.Column="1"
+                              VerticalAlignment="Top"
+                              ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                              Width="800"
+                              Margin="10,10"
+                              MaxHeight="600">
+                    <ListView Name="LstUserSearch"                          
+                              SelectedValuePath="UserId">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="UserID" Width="100">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
                             <GridViewColumn Header="Username" Width="150">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                            <TextBlock HorizontalAlignment="Right" Text="{Binding Username}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="Password" Width="150">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                            <TextBlock HorizontalAlignment="Center" Text="{Binding Password}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn Header="Given Name" Width="150">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                            <TextBlock HorizontalAlignment="Center" Text="{Binding GivenName}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn Header="Surname" Width="150">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                            <TextBlock HorizontalAlignment="Center" Text="{Binding Surname}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="Admin Level" Width="150">
+                            <GridViewColumn Header="Admin Level" Width="50">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                            <TextBlock HorizontalAlignment="Right" Text="{Binding AccessLevelId}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -293,25 +299,25 @@
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Given Name:" Margin="0,10"/>
                     <Label Content="Surname:" Margin="0,10"/>
-                    <Label Content="User ID:" Margin="0,10"/>
+                    <Label Content="UserID:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
-                    <TextBox Name="TbxUpdateUserGiven" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
-                    <TextBox Name="TbxUpdateUserSurname" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxUpdateUserGiven" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="0"/>
+                    <TextBox Name="TbxUpdateUserSurname" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="1"/>
                     <TextBox Name="TbxUpdateUserID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="2" Margin="0,0,0,20">
-                    <Label Content="Email:" Margin="0,10"/>
-                    <Label Content="Mobile No:" Margin="0,10"/>
                     <Label Content="Password:" Margin="0,10"/>
+                    <Label Content="UserID:" Margin="0,10"/>
+                    <Label Name="LblAccLvlId" Content="AccessLevelID" Margin="0,10" Visibility="Hidden"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
-                    <TextBox Name="TbxUpdateEmail" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
-                    <TextBox Name="TbxUpdateUserMobile" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
-                    <TextBox Name="TbxUpdatePassword" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxUpdateUserName" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="3"/>
+                    <TextBox Name="TbxUpdatePassword" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="4"/>
+                    <TextBox Name="TbxUpdateAccessLevelId" Visibility="Hidden" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="25" Margin="0,10" VerticalContentAlignment="Center"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10">
@@ -324,14 +330,20 @@
                             <ColumnDefinition Width="50*"/>
                             <ColumnDefinition Width="50*"/>
                         </Grid.ColumnDefinitions>
-                        <Label Content="Admin Level:" Grid.Row="0" Grid.Column="0" Margin="0,10" HorizontalAlignment="Left"/>
-                        <Menu Name="Mnu_UpdateAdminLevel" AllowDrop="True" Width="200" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" Visibility="Visible" Margin="10,10">
-                            <MenuItem Header="Select Admin Level" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                                <MenuItem Header="Main Admin"/>
-                                <MenuItem Header="Admin Teacher"/>
-                                <MenuItem Header="Reporting"/>
-                            </MenuItem>
-                        </Menu>
+                        <Label Name="LblAccessLevelDrp" Content="Admin Level:" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left"/>
+                        <ComboBox AllowDrop="True"
+                                      TabIndex="4"
+                                      Text="Select Access Level"
+                                      Width="200"
+                                      Grid.Row="0"
+                                      Grid.Column="1"
+                                      HorizontalAlignment="Left"
+                                      Visibility="Visible"
+                                      Margin="0,5"
+                                      Name="CmbBxUpdateAdminLevel"                                      
+                                      ItemsSource="{Binding}"
+                                      DisplayMemberPath="AccessLevel1"
+                                      SelectedValuePath="AccessLevelId"/>
                         <Label Grid.Row="1" Grid.ColumnSpan="2" Name="Lbl_UpdateUserErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
@@ -339,18 +351,26 @@
                                    Content="Error Creating Admin Level Dropdown"
                                    Visibility="Hidden"
                                    HorizontalAlignment="Center"/>
-                    </Grid>
-                </StackPanel>
-                <StackPanel Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnUpdateUser" Height="26" Width="150" Content="Update User" Margin="15,15"/>
-                </StackPanel>
-
+                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_UserUpdateSuccessLabel"
+                                   FontSize="16"
+                                   FontWeight="Bold"
+                                   Foreground="BlueViolet"
+                                   Content="User details successfully updated"
+                                   Visibility="Collapsed"/>
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_UserUpdateErrorLabel"
-                                   FontSize="20"
+                                   FontSize="16"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Updating the User"
-                                   Visibility="Hidden"/>
+                                   Visibility="Collapsed"/>
+                    </Grid>
+                </StackPanel>
+                <StackPanel Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
+                    <Button Name="BtnUpdateUser" Height="26" Width="150" Content="Update User" Margin="15,15" Click="BtnUpdateUser_Click"/>
+                    <Button Name="BtnCancel" Height="26" Width="150" Content="Cancel" Margin="15,15" Click="BtnCancel_Click"/>
+                    <Button Name="BtnReturn" Height="26" Width="150" Content="Return" Margin="15,15" Visibility="Collapsed" Click="BtnReturn_Click"/>
+                </StackPanel>
+                
             </Grid>
         </StackPanel>
         <!-- Stack Panel containing the Delete User form -->
@@ -381,26 +401,36 @@
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Given Name:" Margin="0,10"/>
                     <Label Content="Surname:" Margin="0,10"/>
+                    <Label Content="UserName:" Margin="0,10"/>
                     <Label Content="User ID:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
                     <TextBox Name="TbxDeleteUserGiven" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                     <TextBox Name="TbxDeleteUserSurname" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
-                    <TextBox Name="TbxDeleteUserID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxDeleteUserName" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxDeleteUserId" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
 
 
                 <StackPanel Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnDeleteUser" Height="26" Width="150" Content="Delete User" Margin="15,15"/>
-                </StackPanel>
-
-                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_UserDeleteErrorLabel"
+                    <Button Name="BtnDeleteUser" Height="26" Width="150" Content="Delete User" Margin="15,15" Click="BtnDeleteUser_Click"/>
+                    <Button Name="BtnDeleteUserCancel" Height="26" Width="150" Content="Cancel" Margin="15,15" Click="BtnDeleteUserCancel_Click"/>
+                    <Button Name="BtnDeleteUserReturn" Height="26" Width="150" Content="Return" Margin="15,15" Click="BtnDeleteUserReturn_Click" Visibility="Collapsed"/>
+                    <Label Grid.Row="1" Grid.Column="2" Name="Lbl_UserDeleteSuccessLabel"
+                                   FontSize="20"
+                                   FontWeight="Bold"
+                                   Foreground="BlueViolet"
+                                   Content="User details successfully deleted"
+                                   Visibility="Collapsed"/>
+                    <Label Grid.Row="1" Grid.Column="2" Name="Lbl_UserDeleteErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Deleting the User"
-                                   Visibility="Hidden"/>
+                                   Visibility="Collapsed"/>
+                </StackPanel>
+                
             </Grid>
         </StackPanel>
         
