--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/ClassAdmin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/ClassAdmin.xaml
@@ -6,7 +6,6 @@
       xmlns:local="clr-namespace:SchoolAbsenceMonitorUI"
       mc:Ignorable="d" 
       d:DesignHeight="650" d:DesignWidth="1050"
-      Loaded="Page_Loaded"
       Title="ClassAdmin">
 
     <Grid>
@@ -36,68 +35,68 @@
                 <Menu Name="MnuAdminOptions" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible">
                     <MenuItem Header="Admin Options" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
                         <MenuItem Header="User" Name="MenuItemUser">
-                            <Button Name="BtnUserAdd" Click="BtnUserAdd_Click" ToolTip="Add User">
+                            <Button Name="BtnUserAdd"  ToolTip="Add User">
                                 <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
                             </Button>
-                            <Button Name="BtnUserUpdate" Click="BtnUserUpdate_Click" ToolTip="Update User">
+                            <Button Name="BtnUserUpdate" ToolTip="Update User">
                                 <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
                             </Button>
-                            <Button Name="BtnUserDelete" Click="BtnUserDelete_Click" ToolTip="Delete User">
+                            <Button Name="BtnUserDelete" ToolTip="Delete User">
                                 <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
                             </Button>
                         </MenuItem>
                         <MenuItem Header="Guardian" Name="MenuItemGuardian">
-                            <Button Name="BtnGuardAdd" Click="BtnGuardAdd_Click"  ToolTip="Add Guardian">
+                            <Button Name="BtnGuardAdd"   ToolTip="Add Guardian">
                                 <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
                             </Button>
-                            <Button Name="BtnGuardUpdate" Click="BtnGuardUpdate_Click" ToolTip="Update Guardian">
+                            <Button Name="BtnGuardUpdate"  ToolTip="Update Guardian">
                                 <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
                             </Button>
-                            <Button Name="BtnGuardDelete" Click="BtnGuardDelete_Click" ToolTip="Delete Guardian">
+                            <Button Name="BtnGuardDelete"  ToolTip="Delete Guardian">
                                 <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
                             </Button>
                         </MenuItem>
                         <MenuItem Header="Pupil" Name="MenuItemPupil">
-                            <Button Name="BtnPupilAdd" Click="BtnPupilAdd_Click"  ToolTip="Add Pupil">
+                            <Button Name="BtnPupilAdd"   ToolTip="Add Pupil">
                                 <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
                             </Button>
-                            <Button Name="BtnPupilUpdate" Click="BtnPupilUpdate_Click"  ToolTip="Update Pupil">
+                            <Button Name="BtnPupilUpdate"   ToolTip="Update Pupil">
                                 <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
                             </Button>
-                            <Button Name="BtnPupilDelete" Click="BtnPupilDelete_Click"  ToolTip="Delete Pupil">
+                            <Button Name="BtnPupilDelete"  ToolTip="Delete Pupil">
                                 <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
                             </Button>
                         </MenuItem>
                         <MenuItem Header="Teacher" Name="MenuItemTeacher">
-                            <Button Name="BtnTeacherAdd" Click="BtnTeacherAdd_Click" ToolTip="Add Teacher">
+                            <Button Name="BtnTeacherAdd" ToolTip="Add Teacher">
                                 <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
                             </Button>
-                            <Button Name="BtnTeacherUpdate" Click="BtnTeacherUpdate_Click" ToolTip="Update Teacher">
+                            <Button Name="BtnTeacherUpdate" ToolTip="Update Teacher">
                                 <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
                             </Button>
-                            <Button Name="BtnTeacherDelete" Click="BtnTeacherDelete_Click"  ToolTip="Delete Teacher">
+                            <Button Name="BtnTeacherDelete" ToolTip="Delete Teacher">
                                 <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
                             </Button>
                         </MenuItem>
                         <MenuItem Header="Absence Type" Name="MenuItemAbsence">
-                            <Button Name="BtnAbsenceAdd" Click="BtnAbsenceAdd_Click" ToolTip="Add Absence">
+                            <Button Name="BtnAbsenceAdd" ToolTip="Add Absence">
                                 <Image Source="Images/plus.png" Width="20" Height="20" Stretch="Uniform"/>
                             </Button>
-                            <Button Name="BtnAbsenceUpdate" Click="BtnAbsenceUpdate_Click" ToolTip="Update Absence">
+                            <Button Name="BtnAbsenceUpdate" ToolTip="Update Absence">
                                 <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="Uniform" />
                             </Button>
-                            <Button Name="BtnAbsenceDelete" Click="BtnAbsenceDelete_Click" ToolTip="Delete Absence">
+                            <Button Name="BtnAbsenceDelete" ToolTip="Delete Absence">
                                 <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
                             </Button>
                         </MenuItem>
                         <MenuItem Header="Class" Name="MenuItemClass">
-                            <Button Name="BtnClassAdd" Click="BtnClassAdd_Click"  ToolTip="Add Class">
+                            <Button Name="BtnClassAdd"  ToolTip="Add Class">
                                 <Image Source="Images/plus.png" Width="20" Height="20" Stretch="Uniform"/>
                             </Button>
-                            <Button Name="BtnClassUpdate" Click="BtnClassUpdate_Click" ToolTip="Update Class">
+                            <Button Name="BtnClassUpdate" ToolTip="Update Class">
                                 <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="Uniform" />
                             </Button>
-                            <Button Name="BtnClassDelete" Click="BtnClassDelete_Click" ToolTip="Delete Class">
+                            <Button Name="BtnClassDelete" ToolTip="Delete Class">
                                 <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
                             </Button>
                         </MenuItem>
@@ -177,7 +176,7 @@
 
                 <Menu Name="Mnu_ClassSelector" AllowDrop="True" Width="200" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
                     <MenuItem Header="Select Class" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="ClassType" Name="MnuI_ClassType" Click="MnuI_ClassType_Click"/>
+                        <MenuItem Header="ClassType" Name="MnuI_ClassType"/>
                     </MenuItem>
                 </Menu>
 
