--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/Admin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/Admin.xaml
@@ -23,89 +23,7 @@
 
         <!-- Page Title  -->
         <Label Content="User Admin Page" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>
-
-        <!-- Stack Panel containing the list of available User CRUD options -->
-        <StackPanel Name="Stk_MenuPanel" Visibility="Visible" Grid.Column="1" Grid.Row="1" >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                </Grid.RowDefinitions>
-                <Label Content="Choose Admin Option" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
-                <Label Name="LblOptionError" Content="Error Creating Option Menu" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Hidden"/>
-                <Menu Name="MnuAdminOptions" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible">
-                    <MenuItem Header="Admin Options" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="User" Name="MenuItemUser">
-                            <Button Name="BtnUserAdd" Click="BtnUserAdd_Click" ToolTip="Add User">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnUserUpdate" Click="BtnUserUpdate_Click" ToolTip="Update User">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnUserDelete" Click="BtnUserDelete_Click" ToolTip="Delete User">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Guardian" Name="MenuItemGuardian">
-                            <Button Name="BtnGuardAdd" ToolTip="Add Guardian">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnGuardUpdate" ToolTip="Update Guardian">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnGuardDelete" ToolTip="Delete Guardian">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Pupil" Name="MenuItemPupil">
-                            <Button Name="BtnPupilAdd" ToolTip="Add Pupil">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnPupilUpdate" ToolTip="Update Pupil">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnPupilDelete" ToolTip="Delete Pupil">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Teacher" Name="MenuItemTeacher">
-                            <Button Name="BtnTeacherAdd" ToolTip="Add Teacher">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnTeacherUpdate" ToolTip="Update Teacher">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnTeacherDelete" ToolTip="Delete Teacher">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Absence Type" Name="MenuItemAbsence">
-                            <Button Name="BtnAbsenceAdd" ToolTip="Add Absence">
-                                <Image Source="Images/plus.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnAbsenceUpdate" ToolTip="Update Absence">
-                                <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnAbsenceDelete" ToolTip="Delete Absence">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Class" Name="MenuItemClass">
-                            <Button Name="BtnClassAdd" ToolTip="Add Class">
-                                <Image Source="Images/plus.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnClassUpdate" ToolTip="Update Class">
-                                <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnClassDelete" ToolTip="Delete Class">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                    </MenuItem>
-                </Menu>
-            </Grid>
-        </StackPanel>
-        
+            
         <!-- User CRUD Options -->
         <!-- Stack Panel containing the Add User form -->
         <StackPanel Name="Stk_AddUser" Visibility="Hidden" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top">
@@ -183,6 +101,8 @@
                 </StackPanel>
                 <StackPanel Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
                     <Button Name="BtnAddUser" Height="26" Width="150" Content="Add User" Margin="15,15" Click="BtnAddUser_Click"/>
+                    <Button Name="BtnAddUserCancel" Height="26" Width="150" Content="Return" Margin="15,15" Click="BtnAddUserCancel_Click"/>
+                    <Button Name="BtnAddUserReturn" Height="26" Width="150" Content="Return" Margin="15,15" Visibility="Collapsed" Click="BtnAddUserReturn_Click"/>
                     <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_UserAddErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
