--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/ClassAdmin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/ClassAdmin.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:SchoolAbsenceMonitorUI"
       mc:Ignorable="d" 
       d:DesignHeight="650" d:DesignWidth="1050"
+      Loaded="Page_Loaded"
       Title="ClassAdmin">
 
     <Grid>
@@ -21,89 +22,7 @@
         </Grid.RowDefinitions>
 
         <!-- Page Title  -->
-        <Label Content="Administration Page" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>
-
-        <!-- Stack Panel containing the list of available User CRUD options -->
-        <StackPanel Name="Stk_MenuPanel" Visibility="Visible" Grid.Column="1" Grid.Row="1" >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                </Grid.RowDefinitions>
-                <Label Content="Choose Admin Option" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
-                <Label Name="LblOptionError" Content="Error Creating Option Menu" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Hidden"/>
-                <Menu Name="MnuAdminOptions" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible">
-                    <MenuItem Header="Admin Options" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="User" Name="MenuItemUser">
-                            <Button Name="BtnUserAdd"  ToolTip="Add User">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnUserUpdate" ToolTip="Update User">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnUserDelete" ToolTip="Delete User">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Guardian" Name="MenuItemGuardian">
-                            <Button Name="BtnGuardAdd"   ToolTip="Add Guardian">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnGuardUpdate"  ToolTip="Update Guardian">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnGuardDelete"  ToolTip="Delete Guardian">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Pupil" Name="MenuItemPupil">
-                            <Button Name="BtnPupilAdd"   ToolTip="Add Pupil">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnPupilUpdate"   ToolTip="Update Pupil">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnPupilDelete"  ToolTip="Delete Pupil">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Teacher" Name="MenuItemTeacher">
-                            <Button Name="BtnTeacherAdd" ToolTip="Add Teacher">
-                                <Image Source="Images/new-user.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnTeacherUpdate" ToolTip="Update Teacher">
-                                <Image Source="Images/icon.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnTeacherDelete" ToolTip="Delete Teacher">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Absence Type" Name="MenuItemAbsence">
-                            <Button Name="BtnAbsenceAdd" ToolTip="Add Absence">
-                                <Image Source="Images/plus.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnAbsenceUpdate" ToolTip="Update Absence">
-                                <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnAbsenceDelete" ToolTip="Delete Absence">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                        <MenuItem Header="Class" Name="MenuItemClass">
-                            <Button Name="BtnClassAdd"  ToolTip="Add Class">
-                                <Image Source="Images/plus.png" Width="20" Height="20" Stretch="Uniform"/>
-                            </Button>
-                            <Button Name="BtnClassUpdate" ToolTip="Update Class">
-                                <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                            <Button Name="BtnClassDelete" ToolTip="Delete Class">
-                                <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="Uniform" />
-                            </Button>
-                        </MenuItem>
-                    </MenuItem>
-                </Menu>
-            </Grid>
-        </StackPanel>
+        <Label Content="Administration Page" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>       
 
         <!-- Class CRUD Options -->
         <!-- Stack Panel containing the Add Class form -->
@@ -134,19 +53,84 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
-                    <TextBox Name="TbxClassClassID" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxClassName" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="0"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnAddClass" Height="26" Width="150" Content="Add Class" VerticalAlignment="Center" Margin="10,10"/>
-                </StackPanel>
-
-                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassErrorLabel"
-                                   FontSize="20"
+                    <Button Name="BtnAddClass" Height="26" Width="150" Content="Add Class" VerticalAlignment="Center" Margin="10,10" Click="BtnAddClass_Click" TabIndex="1"/>
+                    <Button Name="BtnCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnCancel_Click" TabIndex="2"/>
+                    <Button Name="BtnReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnReturn_Click"/>
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassAddSuccessLabel"
+                                   FontSize="16"
+                                   FontWeight="Bold"
+                                   Foreground="BlueViolet"
+                                   Content="Class details successfully added"
+                                   Visibility="Collapsed"/>
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassErrorLabel"
+                                   FontSize="16"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Creating New Class"
-                                   Visibility="Hidden"
+                                   Visibility="Collapsed"
                                    HorizontalAlignment="Center"/>
+
+                </StackPanel>
+            </Grid>
+        </StackPanel>
+        <!-- Stack Panel containing the Search Absence Type form -->
+        <StackPanel Name="Stk_SearchClass" Visibility="Hidden" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10*"/>
+                    <ColumnDefinition Width="80*"/>
+                    <ColumnDefinition Width="10*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="80*"/>
+                    <RowDefinition Height="10*"/>
+                </Grid.RowDefinitions>
+                <ScrollViewer Grid.Row="1"
+                              Grid.Column="1"
+                              VerticalAlignment="Top"
+                              ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                              Width="600"
+                              Margin="10,10"
+                              MaxHeight="600">
+                    <ListView Name="LstClassSearch" SelectedValuePath="ClassId">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="ClassID" Width="25">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding ClassId}"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="Class Name" Width="150">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding ClassName}"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                        <ListView.ContextMenu>
+                            <ContextMenu Name="MnuClassSearchContext" IsEnabled="True">
+                                <MenuItem Header="Update Class" Name="MnuIUpdateClass" IsEnabled="True" Click="MnuIUpdateClass_Click">
+                                    <MenuItem.Icon>
+                                        <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="UniformToFill"/>
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                <MenuItem Header="Delete Class" Name="MnuIDeleteClass" IsEnabled="True" Click="MnuIDeleteClass_Click">
+                                    <MenuItem.Icon>
+                                        <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="UniformToFill" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
+                    </ListView>
+                </ScrollViewer>
             </Grid>
         </StackPanel>
         <!-- Stack Panel containing the Update Class form -->
@@ -174,12 +158,6 @@
                            FontSize="20"
                            Content="Enter Updated Class Details"/>
 
-                <Menu Name="Mnu_ClassSelector" AllowDrop="True" Width="200" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
-                    <MenuItem Header="Select Class" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="ClassType" Name="MnuI_ClassType"/>
-                    </MenuItem>
-                </Menu>
-
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Class Name:" Margin="0,10"/>
                     <Label Content="Class ID:" Margin="0,10"/>
@@ -190,7 +168,9 @@
                     <TextBox Name="TbxUpdateClassID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnUpdateAddClass" Height="26" Width="150" Content="Update Class" VerticalAlignment="Center" Margin="10,10"/>
+                    <Button Name="BtnUpdateClass" Height="26" Width="150" Content="Update Class" VerticalAlignment="Center" Margin="10,10" Click="BtnUpdateClass_Click"/>
+                    <Button Name="BtnUpdateCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnUpdateCancel_Click"/>
+                    <Button Name="BtnUpdateReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnUpdateReturn_Click"/>
                 </StackPanel>
 
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassUpdateErrorLabel"
@@ -225,13 +205,6 @@
                            HorizontalAlignment="Center"
                            FontSize="20"
                            Content="Please Check Class Details Before Deletion"/>
-
-                <Menu Name="Mnu_DeleteClassSelector" AllowDrop="True" Width="200" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
-                    <MenuItem Header="Select Class" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="Delete Class" Name="MnuI_DeleteClass"/>
-                    </MenuItem>
-                </Menu>
-
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Class Name:" Margin="0,10"/>
                     <Label Content="Class ID:" Margin="0,10"/>
@@ -242,9 +215,11 @@
                     <TextBox Name="TbxDeleteClassID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnDeleteAddClass" Height="26" Width="150" Content="Delete Class" VerticalAlignment="Center" Margin="10,10"/>
+                    <Button Name="BtnDeletClass" Height="26" Width="150" Content="Delete Class" VerticalAlignment="Center" Margin="10,10" Click="BtnDeletClass_Click"/>
+                    <Button Name="BtnDeleteCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnDeleteCancel_Click"/>
+                    <Button Name="BtnDeleteReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnDeleteReturn_Click"/>
                 </StackPanel>
-
+                
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassDeleteErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
