--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/AbsenceTypeAdmin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/AbsenceTypeAdmin.xaml
@@ -54,18 +54,21 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
-                    <TextBox Name="TbxAbsenceAbsenceID" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
+                    <TextBox Name="TbxAbsenceTypeDesc" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnAddAbsence" Height="26" Width="150" Content="Add Absence" VerticalAlignment="Center" Margin="10,10"/>
-                </StackPanel>
-
+                    <Button Name="BtnAddAbsence" Height="26" Width="150" Content="Add Absence" VerticalAlignment="Center" Margin="10,10" Click="BtnAddAbsence_Click"/>
+                    <Button Name="BtnAddAbsenceCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnAddAbsenceCancel_Click"/>
+                    <Button Name="BtnAddAbsenceReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnAddAbsenceReturn_Click"/>
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_AbsenceErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Creating New Absence"
-                                   Visibility="Hidden"/>
+                                   Visibility="Collapsed"/>
+                </StackPanel>
+
+                
             </Grid>
         </StackPanel>
         <!-- Stack Panel containing the Search Absence Type form -->
@@ -87,7 +90,7 @@
                               ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                               Width="600"
                               Margin="10,10"
-                              MaxHeight="600">
+                              MaxHeight="600" SelectedValuePath="AbsenceTypeId">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="AbsenceTypeID" Width="150">
@@ -108,12 +111,12 @@
                         </ListView.View>
                         <ListView.ContextMenu>
                             <ContextMenu Name="MnuAbsenceTypeSearchContext" IsEnabled="True">
-                                <MenuItem Header="Update AbsenceType" Name="MnuIUpdateAbsenceType" IsEnabled="True">
+                                <MenuItem Header="Update AbsenceType" Name="MnuIUpdateAbsenceType" IsEnabled="True" Click="MnuIUpdateAbsenceType_Click">
                                     <MenuItem.Icon>
                                         <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="UniformToFill"/>
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                <MenuItem Header="Delete AbsenceType" Name="MnuIDeleteAbsenceType" IsEnabled="True">
+                                <MenuItem Header="Delete AbsenceType" Name="MnuIDeleteAbsenceType" IsEnabled="True" Click="MnuIDeleteAbsenceType_Click">
                                     <MenuItem.Icon>
                                         <Image Source="Images/rubbish-bin.png" Width="20" Height="20" Stretch="UniformToFill" />
                                     </MenuItem.Icon>
@@ -139,9 +142,6 @@
                     <RowDefinition Height="20*"/>
                     <RowDefinition Height="10*"/>
                 </Grid.RowDefinitions>
-
-
-
                 <Label Name="Lbl_UpdateAbsenceLabel"
                            Grid.Row="0"
                            Grid.Column="0"
@@ -149,12 +149,6 @@
                            HorizontalAlignment="Center"
                            FontSize="20"
                            Content="Enter Updated Absence Type Details"/>
-
-                <Menu Name="Mnu_AbsenceSelector" AllowDrop="True" Width="200" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
-                    <MenuItem Header="Select Absence Type" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="AbsenceType" Name="MnuI_AbsenceType"/>
-                    </MenuItem>
-                </Menu>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Absence Type:" Margin="0,10"/>
@@ -166,15 +160,18 @@
                     <TextBox Name="TbxUpdateAbsenceAbsenceID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnUpdateAddAbsence" Height="26" Width="150" Content="Update Absence" VerticalAlignment="Center" Margin="10,10"/>
-                </StackPanel>
-
-                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_AbsenceUpdateErrorLabel"
+                    <Button Name="BtnUpdateAbsence" Height="26" Width="150" Content="Update Absence" VerticalAlignment="Center" Margin="10,10" Click="BtnUpdateAbsence_Click"/>
+                    <Button Name="BtnUpdateAbsenceCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnUpdateAbsenceCancel_Click"/>
+                    <Button Name="BtnUpdateAbsenceReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnUpdateAbsenceReturn_Click"/>
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_AbsenceUpdateErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Updating the Absence Type"
-                                   Visibility="Hidden"/>
+                                   Visibility="Collapsed"/>
+                </StackPanel>
+
+                
             </Grid>
         </StackPanel>
         <!-- Stack Panel containing the Delete Absence form -->
@@ -193,7 +190,6 @@
                     <RowDefinition Height="20*"/>
                     <RowDefinition Height="10*"/>
                 </Grid.RowDefinitions>
-
                 <Label Name="Lbl_DeleteAbsenceLabel"
                            Grid.Row="0"
                            Grid.Column="0"
@@ -201,12 +197,6 @@
                            HorizontalAlignment="Center"
                            FontSize="20"
                            Content="Please Check Absence Details Before Deletion"/>
-
-                <Menu Name="Mnu_DeleteAbsenceSelector" AllowDrop="True" Width="200" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
-                    <MenuItem Header="Select Absence Type" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="Delete Absence"/>
-                    </MenuItem>
-                </Menu>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
                     <Label Content="Absence Type:" Margin="0,10"/>
@@ -218,17 +208,17 @@
                     <TextBox Name="TbxDeleteAbsenceID" IsEnabled="False" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="2"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical" Margin="10,0,0,20">
-                    <Button Name="BtnDeleteAbsence" Height="26" Width="150" Content="Delete Absence" VerticalAlignment="Center" Margin="10,10"/>
-                </StackPanel>
-
-                <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_AbsenceDeleteErrorLabel"
+                    <Button Name="BtnDeleteAbsence" Height="26" Width="150" Content="Delete Absence" VerticalAlignment="Center" Margin="10,10" Click="BtnDeleteAbsence_Click"/>
+                    <Button Name="BtnDeleteAbsenceCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnDeleteAbsenceCance_Click"/>
+                    <Button Name="BtnDeleteAbsenceReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnDeleteAbsenceReturn_Click"/>
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_AbsenceDeleteErrorLabel"
                                    FontSize="20"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Deleting the Absence"
-                                   Visibility="Hidden"/>
+                                   Visibility="Collapsed"/>
+                </StackPanel>                
             </Grid>
         </StackPanel>
-
     </Grid>
 </Page>
